crates/snapshot-tests/tests/snapshots/parser__bad_arrays__unclosed.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnclosedArray]: unclosed array, expected `]` at `a`
  ┌─ unclosed:1:10
  │
1 │ a = [1, 2
  │          ^ expected `]`


error: unclosed array, expected `]` at `a`
 --> unclosed:1:10
  |
1 | a = [1, 2
  |          ^ expected `]`
Error {
    kind: "UnclosedArray",
    message: "unclosed array, expected `]`",
    span: 9..9,
    path: Some(
        "a",
    ),
}
